add metrics for scan and remove unnecessary metrics for standalone related modes